--- a/01_instalacao_vue/index.html
+++ b/01_instalacao_vue/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
+
+    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+
+    <script src="src/app.js" defer></script>
+
 </head>
+
 <body>
+
+    <!-- Elemento que o vue vai ser inicializado -->
+    <div id="app">
+
+        <p>O meu nome é: {{ name }}, e tenho {{ age }} anos</p>
+
+    </div>
     
 </body>
+
 </html>
