--- a/01_instalacao_vue/index.html
+++ b/01_instalacao_vue/index.html
@@ -21,7 +21,17 @@
     <!-- Elemento que o vue vai ser inicializado -->
     <div id="app">
 
-        <p>O meu nome é: {{ name }}, e tenho {{ age }} anos</p>
+        <form id="app-form">
+
+            <input type="text" v-model="input_name" placeholder="Digite o seu nome">
+
+            <input type="submit" value="Enviar" v-on:click="submitForm">
+
+        </form>
+
+        <p>O meu nome é: {{ name }}</p>
+
+        <p>Data binding: {{ input_name }}</p>
 
     </div>
     
